Fix class interpreter

--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -4,6 +4,6 @@ html {
 body, a{
        color: #161616;
 }
-card-category, section-tagline{
+.card-category, .section-tagline{
        color: #D73953;
 }
