--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -31,6 +31,8 @@
        /* Header align*/
        --section-header-align: center;
        --section-tagline-transform: uppercase;
+       --section-title-margin: 0;
+	--section-title-color: var(--color-black);
 }
 
 html {
