--- a/0x04-flexbox/100-styles.css
+++ b/0x04-flexbox/100-styles.css
@@ -579,7 +579,7 @@
               margin: 1rem 0;
               padding: 0 .5rem;
               font-size: font-size-small;
-              color: color-grey;
+              color: var(color-grey);
               text-align: center;
        }
      
