--- a/0x04-flexbox/100-styles.css
+++ b/0x04-flexbox/100-styles.css
@@ -572,15 +572,15 @@
        }
 
        .post-content p:first-child {
-              font-size: var(--font-size-x-large);
+         font-size: var(--font-size-x-large);
        }
 
        .post-content .img-caption {
-              margin: 1rem 0;
-              padding: 0 .5rem;
-              font-size: var(--font-size-small);
-              color: var(--color-grey);
-              text-align: center;
+         margin: 1rem 0;
+         padding: 0 .5rem;
+         font-size: var(--font-size-small);
+         color: var(--color-grey);
+         text-align: center;
        }
      
        .post-aside {
@@ -588,9 +588,9 @@
          min-width: 20%;
        }
 
-       .post-img {
-              width: 100%;
-              height: auto;
+       .post img {
+         width: 100%;
+         height: auto;
        }
    
        /* Post Meta
